Fix page alignment issues with long paragraphs of chatbox (#91)

--- a/dna-frontend/src/app/core/components/chatbox/chatbox.component.scss
+++ b/dna-frontend/src/app/core/components/chatbox/chatbox.component.scss
@@ -1,6 +1,8 @@
 :host {
   --box-border-radius: 10px;
-  margin: 50px;
+  margin: 20px 0px;
+  width: 500px;
+  display: block;
 }
 
 .left {
